[package]
edition = "2021"
name = "scylladb-javascript-driver"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"
scylla = { git = "https://github.com/scylladb/scylla-rust-driver.git", rev = "v0.14.0", features = [
    "ssl",
] }
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"

[profile.dev]
panic = "abort"
