[package]
edition = "2021"
name = "scylladb-javascript-driver"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]

napi = { version = "2.12.2", default-features = false, features = ["napi4", "napi6", "async"] }
napi-derive = "2.12.2"
scylla = { git = "https://github.com/scylladb/scylla-rust-driver.git", rev = "v0.15.0", features = [
    "ssl",
] }
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
uuid = "1"
thiserror = "2.0.12"


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"

[profile.dev]
panic = "abort"
