[package]
edition = "2024"
name = "scylladb-javascript-driver"
version = "0.0.2"

[lib]
crate-type = ["cdylib"]

[dependencies]

napi = { version = "2.16.16", default-features = false, features = ["napi4", "napi6", "async"] }
napi-derive = "2.16.6"
scylla = { git = "https://github.com/scylladb/scylla-rust-driver.git", rev = "v1.3.1" }
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
uuid = "1"
regex = "1.11.1"
thiserror = "2.0.12"


[build-dependencies]
napi-build = "2.1.5"

[profile.release]
lto = true
strip = "symbols"

[profile.dev]
panic = "abort"

[[bin]]
name = "select_benchmark"
path = "benchmark/logic_rust/select.rs"

[[bin]]
name = "insert_benchmark"
path = "benchmark/logic_rust/insert.rs"

[[bin]]
name = "concurrent_insert_benchmark"
path = "benchmark/logic_rust/concurrent_insert.rs"

[[bin]]
name = "concurrent_select_benchmark"
path = "benchmark/logic_rust/concurrent_select.rs"

[[bin]]
name = "batch_benchmark"
path = "benchmark/logic_rust/batch.rs"
